--- a/data_preparation/notebook_data_preparation.ipynb
+++ b/data_preparation/notebook_data_preparation.ipynb
@@ -180,6 +180,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "110\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(111) :\n",
+    "    x = i\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
